CURRENT
    Reorganised src directories pertaining to subscreen/xml extensions. These
	modules are now inserted in LOAD_PATH.
	
Date: Fri Apr 24 2015
    Added a XML screen/subscreen description facility; improved functionality
	in the area of inter subscreen communication (connector/connection).
	Using LightXML.jl, and various editors/validators for xsd; however
	XML validation needs improvement, diagnostics during XML parsing
	also need improvement.

Date: Thu Apr 16 13:22:54 2015 +0200
        Integrated with upstream commit, enables 3Dplots
	
Date: Sat Apr 11 22:55:23 2015 +0200
    Adding functionality: camera movement in one subscreen follows a different
	 subscreen ; progress towards implementing a more general facility
	 (Adaptor) permitting to feed one subscreen signals into a different one.

Date: Mon Apr 6 18:55:44 2015 +0200
    Adding interface to effect geometrical (and possibly other) transformations
	on RenderObject or their presentation by OGL.
	Using 2 techniques: 
	    -camera (in Screen...)
	    -RenderObject (added field manipVirtuals ... not used at the moment)
	Currently works for cube(own RO construction), plot of 2D 
	function ( as provided  with Romeo).

	Issues: Problem when trying to visualize plot of 3D data field (
	        error in renderloop)

Date: Tue Mar 31 11:33:47 2015 +0200
    Modularized RomeoLib
    SubsScreens reimplemented for hierachical subscreen model, 
        previous version now called SimpleSubScreens. Additional functionality
        and extensible framework (attrib in SubScreens permit to add various
        set up operations; will try to implement first (not for this commit):
           - shared view parameters between subscreens (dynamic, one view follows the other)
           - derived view parameters (static):subscreen shows a fix view of other subscreen
           - derived view parameters (dynamicà
           - time dependent display

Date:   Sun Mar 22 13:59:32 2015 +0100